Closed
Bug 137067
Opened 23 years ago
Closed 23 years ago
Button don't show the "pressed" state
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.0
People
(Reporter: gilles+mozilla, Assigned: dbaron)
References
Details
(Keywords: modern, regression)
Attachments
(1 file, 2 obsolete files)
|
1.17 KB,
patch
|
waterson
:
superreview+
|
Details | Diff | Splinter Review |
2002041200 cvs linux trunk
Open preferences.
Press on ok, cancel, help.
Expected results: button is shown pressed
Actual results: button does not change
It happens everywhere (browser,mail/news,address book) but only in Modern.
Classic is ok.
| Reporter | ||
Comment 1•23 years ago
|
||
Build 2002040922 is ok.
Build 2002041022 is not.
Comment 2•23 years ago
|
||
Can you give more detailed steps to reproduce? What exact panels under
Preferences do you visit to reproduce this?
| Reporter | ||
Comment 3•23 years ago
|
||
Just open prefs and click on "ok" and keep your mouse button pressed.
Normally the "ok" button should be drawn lowered like
http://mozilla.durys.net/button_ok.png .
With my build, it isn't being drawn differently.
It only happens on a trunk build in modern.
Classic is ok.
1.0 branch is ok (both modern and classic).
*** Bug 137157 has been marked as a duplicate of this bug. ***
Keywords: regression
*** Bug 137256 has been marked as a duplicate of this bug. ***
Comment 7•23 years ago
|
||
It looks this was caused by bug 5693, probably it should go to dbaron, who fixed
that one.
I'm also seeing this on my development tree of EarlyBlue skin, I'm not sure why
this is working on Classic and failing for e.g. EarlyBlue, because I copied most
of the code from Classic and modified it only slightly...
It seems like :hover:active is not working correctly on the button element...
Comment 8•23 years ago
|
||
I could fix this with inserting
@import url("chrome://global/skin/button.css");
into global/global.css in my own skin.
This isn't a really nice hack but working for me currently. It seems like CSS
rules in those files aren't picked up correctly...
I'll look if this does also help modern...
Comment 9•23 years ago
|
||
hmm, this really helps. I see this plus the same hack for toolbarbutton cause
some positioning (non-:hover of :hover:active related) flaws though...
This isn't the ideal solution, that's clear. But it shows that the underlying
problem seems to be somewhere when applying style...
BTW, this really looks the same problem as bug 137069 and bug 137124, as I could
fix them with the same hack (that's why I also did it for toobarbutton).
We should really look what changes we have here between the builds mentioned in
Comment #1
| Assignee | ||
Comment 10•23 years ago
|
||
->me. I have a fix. See bug 137247 comment 2 for a description of the problem.
Assignee: shliang → dbaron
Component: Themes → Style System
QA Contact: pmac → ian
| Assignee | ||
Comment 11•23 years ago
|
||
*** Bug 137247 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•23 years ago
|
||
*** Bug 137124 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
| Assignee | ||
Comment 14•23 years ago
|
||
Oh, I get it. It actually was my fault, and I was just assuming that the
breakout optimization always worked. So there is an alternate fix, which is
simpler.
| Assignee | ||
Comment 15•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #79151 -
Attachment is obsolete: true
| Assignee | ||
Comment 16•23 years ago
|
||
Attachment #79153 -
Attachment is obsolete: true
Comment 17•23 years ago
|
||
*** Bug 137353 has been marked as a duplicate of this bug. ***
Comment 18•23 years ago
|
||
So let me get this straight. The reason this failed is that we'd be in
WalkRuleProcessors, would call mStyleRuleSupplier->WalkRules(this, aFunc,
aData);, that would set the mStateful bool to true, then we'd walk
mDocRuleProcessors and that would clobber mStateful on the data?
If that's what's going on, r=bzbarsky.
| Assignee | ||
Comment 19•23 years ago
|
||
Yep. Or different things within the stateful rule processors stuff would
clobber each other.
Comment 20•23 years ago
|
||
Comment on attachment 79155 [details] [diff] [review]
add comment to prevent the same mistake
sr=waterson
Attachment #79155 -
Flags: superreview+
| Assignee | ||
Comment 21•23 years ago
|
||
Fix checked in to trunk, 2002-04-15 15:28 PDT.
Comment 22•23 years ago
|
||
this appears fixed to me, shouldn't it be set to that state?
dbaron?
Comment 23•23 years ago
|
||
*** Bug 137069 has been marked as a duplicate of this bug. ***
Comment 24•23 years ago
|
||
Does this bug also cover the problem where buttons in dialogs never appear to
be focused?
| Assignee | ||
Comment 25•23 years ago
|
||
This is fixed since it was never a problem on the branch (see above). I'll
remember to check it in on the branch when I land bug 5693 there.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 26•23 years ago
|
||
*** Bug 137247 has been marked as a duplicate of this bug. ***
Comment 27•23 years ago
|
||
*** Bug 137321 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•