Fix event state changes on some UI buttons by not overwriting a true result from HasStateDependentStyle with a false one.  b=137067  r=bzbarsky  sr=waterson